# WorkMate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  chunk_tuning_experiment.py  ingest.py  main.py  pyproject.toml  test_llm_service_manual.py
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
aws_lambda/detector/: lambda_function.py
aws_lambda/worker/: Dockerfile  lambda_function.py
chroma_db/: chroma.sqlite3
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/hooks/: useIsAdmin.ts
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: auth.ts  chat.ts
frontend/src/utils/: exportMarkdown.ts
ibm-linuxone/: Chroma.Dockerfile  backup.sh  docker-compose.yaml
k8s/: chroma.yaml  cluster.yaml  deployment.yaml  namespace.yaml  secret.yaml  service.yaml
scripts/: docker-push-ecr.sh
src/: .gitkeep
src/Notion/: ID check.py  debug_api_access.py  fetch_block.py  fetch_child_database.py  fetch_database.py  fetch_page.py  scripts.py
src/Notion/notion_fetcher/: Notion_Fetcher.py  client.py  main.py
src/backend/: app.py  config.py  database.py
src/backend/dependencies/: auth.py  services.py  workspace.py
src/backend/llm/: config.py  gemini_client.py  prompts.py  voyage_reranker.py
src/backend/load/: .gitkeep  bm25_manager.py  chroma_manager.py  google_embedder.py  hybrid_retriever.py
src/backend/models/: __init__.py  conversation.py  notion.py  user.py
src/backend/routers/: admin.py  auth.py  chat.py  conversations.py  (+2 more)
(+43 files in other folders)
